# li_curriculum_table

./: .gitignore  README.md  analysis.txt  analysis_options.yaml  analysis_output.txt  distribute_options.yaml  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  index.js  pubspec.yaml
.fastforge/: config.yaml
.fastforge/packaging/linux/: appimage.yaml  deb.yaml  pacman.yaml  rpm.yaml
.fastforge/packaging/windows/: exe.yaml
.github/: deploy.yml
.github/workflows/: ci.yml  deploy-web.yml  deploy.yml  release.yml
android/: build.gradle.kts  gradle.properties  key.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ARCHITECTURE.md  main.dart
lib/app/: app.dart
lib/core/: architecture_standards.md
lib/core/config/: timetable_endpoints.dart
lib/core/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/core/rust/api/: auth.dart  classroom.dart  crawler.dart  grade.dart  ocr.dart
lib/core/rust/crawler/: model.dart
lib/core/services/: ocr_initializer.dart
lib/core/settings/data/: settings_repository_impl.dart
lib/core/settings/domain/: settings_repository.dart
lib/core/settings/presentation/: settings_providers.dart
lib/features/classroom/data/datasources/: classroom_remote_datasource.dart  secure_classroom_local_datasource.dart
lib/features/classroom/data/repositories/: classroom_repository_impl.dart
lib/features/classroom/domain/models/: building.dart  building.freezed.dart  building.g.dart  campus.dart  campus.freezed.dart  campus.g.dart  classroom_availability.dart  classroom_availability.freezed.dart  classroom_availability.g.dart  classroom_schedule.dart  classroom_schedule.freezed.dart  classroom_schedule.g.dart
lib/features/classroom/domain/repositories/: classroom_repository.dart
lib/src/ocr/: ddddocr.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/table_getter/: http_client_factory.dart  http_client_factory_stub.dart  pachong.dart
lib/util/: feedback_handler.dart  util.dart
linux/: CMakeLists.txt  README.md  pubspec.yaml
linux/android/app/: build.gradle.kts
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/ios/Runner/: Info.plist
linux/ios/Runner.xcodeproj/: project.pbxproj
linux/macos/Runner.xcodeproj/: project.pbxproj
linux/macos/Runner/Configs/: AppInfo.xcconfig
linux/packaging/: li_curriculum_table.appdata.xml
linux/packaging/appimage/: make_config.yaml
linux/packaging/deb/: make_config.yaml
linux/packaging/pacman/: make_config.yaml
linux/packaging/rpm/: make_config.yaml
linux/runner/: my_application.cc
linux/web/: index.html
linux/windows/runner/: Runner.rc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/packaging/dmg/: make_config.yaml
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs  ocr.rs
rust/src/api/: auth.rs  classroom.rs  crawler.rs  grade.rs  mod.rs  ocr.rs  simple.rs
rust/src/crawler/: client.rs  error.rs  mod.rs  model.rs  parser.rs  parser_test.rs
rust/src/crawler/core/: mod.rs  proxy_server.rs  session.rs
rust/src/crawler/services/: classroom.rs  grade.rs  mod.rs  timetable.rs
rust/src/model/: common_pruned.json  mod.rs
rust/tests/: test_ocr.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_curriculum_table.podspec  rust_lib_li_curriculum_table.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_curriculum_table.podspec  rust_lib_li_curriculum_table.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: fix_pacman.sh  package_linux.sh
test/: ocr_dart_test.dart
web/: index.html  manifest.json  zstd.js
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/packaging/msix/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
(+95 files in other folders)
