[package]
name = "rust_lib_li_curriculum_table"
version = "0.1.0"
edition = "2021"

[features]


[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "rustls", "form"] }
scraper = "0.26.0"
tract-onnx = "0.22.1"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["sync", "macros"] }
regex = "1.12.3"
getrandom = { version = "0.2.17", features = ["js"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
