[package]
name = "rust_lib_li_curriculum_table"
version = "0.1.0"
edition = "2021"

[features]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-bulk-memory",
    "--enable-threads",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "cookies",
    "json",
    "rustls",
    "form",
] }
log = "0.4.29"
scraper = "0.26.0"
tract-onnx = "0.22.1"
tract-nnef = "0.22.1"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["sync", "macros"] }
regex = "1.12.3"
url = "2.5.8"
encoding_rs = "0.8.35"
getrandom = { version = "0.2.17", features = ["js"] }
console_log = "1.0.0"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
