[package]
name = "rust_lib_li_curriculum_table"
version = "0.1.0"
edition = "2021"

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-bulk-memory",
    "--enable-threads",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-simd",
]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "cookies",
    "json",
    "rustls",
    "form",
] }
log = "0.4.29"
scraper = "0.26.0"
burn = { version = "0.21.0-pre.3" }
burn-flex = "0.21.0-pre.3"
burn-store = "0.21.0-pre.3"
half = { version = "2.7.1", features = ["num-traits"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["sync", "macros"] }
regex = "1.12.3"
url = "2.5.8"
encoding_rs = "0.8.35"
base64 = "0.22.1"
console_log = "1.0.0"

[build-dependencies]
burn-onnx = "0.21.0-pre.3"
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
half = { version = "2.7.1", features = ["num-traits", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
burn = { version = "0.21.0-pre.3" }
burn-store = { version = "0.21.0-pre.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.51.1", features = ["net", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
incremental = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
